--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,10 +1,12 @@
-- clean: ['~']
+- clean: ["~"]
 
 - link:
 
-
-- clean: ['~']
+- clean: ["~"]
 
 - link:
+  # ahk
+  C:\Users\raineedust\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup: ahk/ahk-startup
 
-
+  # espanso
+  C:\Users\raineedust\AppData\Roaming\espanso\match: espanso/email.yml
