--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Tan Jin Yi
-	email = rayneedust@gmail.com
+	name = Justin Tan
+	email = raineedust@proton.me
 [core]
 	autocrlf = input
 	eol = lf
