--- a/espanso/social.yml
+++ b/espanso/social.yml
@@ -24,13 +24,13 @@ matches:
     replace: "raineedust@proton.me"
 
   - trigger: "!gh"
-    replace: https://github.com/raineedust
+    replace: "https://github.com/raineedust"
 
   - trigger: "!in"
-    replace: http://www.linkedin.com/in/raineedust
+    replace: "http://www.linkedin.com/in/raineedust"
 
   - trigger: "!site"
-    replace: https://raineedust.netlify.app/
+    replace: "https://raineedust.netlify.app/"
 
   # Support
 
